Add article view

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,10 +10,18 @@
     </head>
     <body>
         <h3>SOURCES</h3>
+        <ul>
+            {% for article in top_articles%}
+                <li>{{ article.description }}</li>
+            {% endfor %}    
+        </ul>
         <ol>
             {% for source in all_sources%}
                 <li>{{ source.name }}</li>
             {% endfor %}    
         </ol>
+
+    
+        
     </body>
 </html>
