--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,21 +1,20 @@
 {% extends 'base.html' %}
+{% import 'macros.html' as macro %}
+
+<!-- Styles block -->
 
 <!-- Content block -->
+
 {% block content %}
-
-<h3>SOURCES</h3>
-<ol>
-  {% for source in all_sources%}
-    <li>{{ source.name }}</li>
-  {% endfor %}    
-</ol>
-
-
-<ul>
-  {% for article in top_articles%}
-    <li>{{ article.name['name'] }}</li>
-  {% endfor %}    
-</ul>
-
-
+<div class="container-fluid">
+  <div class="row">
+    <h1 class="text-center"> GLOBAL NEWS</h1>
+    <h3 class="text-center"> Never miss out on the latest news</h3>
+  </div>
+  <div>
+    <div class="row">
+        {{macro.displaySourceList(general)}}
+    </div>
+  </div>
+</div>
 {% endblock %}
