--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -17,13 +17,19 @@
 {% for article in articles_list %}
 
 <div class="col-md-8">
-  <div class="jumbotron">
-    <div><h3 class="card-title">{{article.title}}</h3></div>
-    <div><p class="card-text">{{article.description}}</p></div>
+  <div class="card">
+    <div class="card-title">
+        <h3>{{article.title}}</h3>
+    </div>
+    <div class="card-text">
+        <p>{{article.description | truncate(70)}}</p>
+    </div>
       <p class="text-center">
-        <img class="card-img-top .img-fluid" src="{{article.urlToImage}}" alt="Card image cap">
+        <img class="card-img-top" src="{{article.urlToImage}}" alt="article image">
       </p>
-    <div><p class="card-text"><a href="{{article.url}}">READ MORE</a></p></div>
+    <div class="card-text">
+        <p><a href="{{article.url}}">READ MORE</a></p>
+    </div>
   </div>
 </div>
 
