--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="container-fluid">
   <div class="row">
-    <h3 class="text-center"> Headlines</h3>
+    <h3 class="text-center">{{head}} HEADLINES</h3>
   </div>
   <div class="row">
       {{macro.displayArticleList(news)}}
