--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -19,16 +19,17 @@
 <div class="col-md-8">
   <div class="card">
     <div class="card-title">
-        <h3>{{article.title}}</h3>
+        <h3 class="text-center">{{article.title}}</h3>
     </div>
-    <div class="card-text">
-        <p>{{article.description | truncate(70)}}</p>
+    <div class="text-center">
+        <p>{{article.description}}</p>
     </div>
       <p class="text-center">
         <img class="card-img-top" src="{{article.urlToImage}}" alt="article image">
       </p>
     <div class="card-text">
-        <p><a href="{{article.url}}">READ MORE</a></p>
+      <small>{{article.author}}</small>
+      <p><a href="{{article.url}}">READ MORE</a></p>
     </div>
   </div>
 </div>
